# frontrunning_bot

./: .example.env  Cargo.toml  README.md
artifacts/abi/: bot.json
contracts/: Bot.sol
src/: config.rs  lib.rs  main.rs  setup.rs
