[package]
name = "mev_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls", "abigen"] }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
anyhow = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
serde_json = "1.0"
dotenv = "0.15.0"
